translating footer and header.

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,9 @@
 name:          Code Guide by @mdo
 description:   Standards for developing flexible, durable, and sustainable HTML and CSS.
 url:           http://mdo.github.com/code-guide
+name_ptbr:          Guia de Código do @mdo
+description_ptbr:   Padrões para desenvolver código HTML e CSS flexíveis, duráveis e sustentáveis.
+url_ptbr:           http://diegoeis.github.com/code-guide/pt-br
 
 markdown:      rdiscount
 permalink:     pretty
